--- a/Kaleidoscope.css
+++ b/Kaleidoscope.css
@@ -4,7 +4,7 @@
 	@author Alberto Calvo
 */
 
-:document-base {
+@base {
 	color: #f8f8f8;
 	background-color: #0c1021;
 	insertion-point-color: #fff;
